# mnemosyne

./: CHANGELOG.md  README.md  pyproject.toml
.github/: FUNDING.yml
docs/: changelog.md  hermes-integration.md  security.md  sync.md
hermes_memory_provider/: __init__.py
integrations/hermes/: README.md  plugin.yaml  pyproject.toml
integrations/hermes/src/mnemosyne_hermes/: __init__.py  audit.py  cli.py  hermes_llm_adapter.py  install.py  plugin.yaml  tools.py
mnemosyne/: diagnose.py  install.py
mnemosyne/core/: beam.py
mnemosyne/core/importers/: __init__.py  holographic.py
scripts/: generate-docs.py
tests/: test_recall_precision_regressions.py
tools/: evaluate_beam_end_to_end.py
